--- a/style.css
+++ b/style.css
@@ -6,19 +6,27 @@
 }
 
 body {
+  display: grid;
+  grid-template-areas:
+    "header header"
+    "nav img_card__container"
+    "footer footer";
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 1fr 3fr;
+  min-height: 100vh;
   font-family: 'Indie Flower', cursive;
   font-size: 1.2rem;
   margin: 0;
   box-sizing: border-box;
-  min-height: 100vh;
 }
 
 .header {
+  grid-area: header;
   background-color: var(--primary);
   color: var(--white);
-  display: grid;
+  display: flex;
   align-items: center;
-  justify-items: center;
+  justify-content: center;
 }
 
 .header__title {
@@ -28,26 +36,30 @@ body {
 }
 
 .nav__container {
+  grid-area: nav;
   box-shadow: var(--gray) 4px 4px 10px 2px;
-  display: grid;
-  row-gap: 24px;
-  grid-template-columns: 1fr;
-  min-width: 200px;
-  justify-items: center;
   padding: 12px 0 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 20px; 
 }
 
 .nav__link, .nav__link--active {
   text-decoration: none;
   color: var(--primary);
   position: relative;
+  margin: 10px 0;
 }
+
 .nav__link::after, .nav__link--active::after {
   position: absolute;
   content: "";
   bottom: 0;
   left: 50%;
-  margin-left: -90px;
+  transform: translateX(-50%);
   border-bottom: var(--primary) 1px solid;
   width: 180px;
 }
@@ -57,43 +69,125 @@ body {
   padding: 0 70px;
 }
 
+.img_card__container {
+  grid-area: img_card__container;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-auto-rows: auto;
+  gap: 16px;
+  padding: 40px;
+}
+
 .img_card {
-  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
   box-shadow: var(--gray) 4px 4px 10px 2px;
   border-radius: 3px;
+  text-align: center;
 }
 
 .img_card__img {
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
+  width: 100%;
+  height: auto;
 }
 
 .img_card__text {
-  padding: 0 12px;
+  padding: 10px;
+  flex-grow: 1;
 }
 
 .footer {
+  grid-area: footer;
   display: grid;
   align-items: center;
   justify-items: center;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 768px) {
+  body {
+    grid-template-areas:
+      "header"
+      "nav"
+      "img_card__container"
+      "footer";
+    grid-template-columns: 1fr;
+  }
+
+  .nav__container {
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 0;
+  }
+
+  .nav__link {
+    margin: 0 15px;
+    font-size: 1rem;
+  }
+
+  .nav__link::after {
+    width: 100%;
+  }
+
   .header__title {
     font-size: 2rem;
   }
-  .nav__container {
-    width: 80vw;
-    min-width: 300px;
-    grid-template-columns: repeat(4, 1fr);
-  }
-  .nav__link, .nav__link--active {
-    text-decoration: underline;
-  }
-  .nav__link--active {
-    padding: 0;
-  }
-  .nav__link::after, .nav__link--active::after {
-    display: none;
+
+  .img_card__container {
+    grid-template-columns: 1fr;
   }
 }
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .nav__container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: fit-content;
+  }
+
+  .nav__link {
+    margin: 0 20px;
+    font-size: 1.1rem;
+  }
+
+  .nav__link::after {
+    width: 80%;
+  }
+
+  .img_card__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .nav__container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 40px; 
+
+  .nav__link {
+    margin: 10px 0;
+    font-size: 1.2rem;
+  }
+
+  .nav__link::after {
+    width: 180px;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1266px) {
+  .nav__container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    margin: 40px auto 0; 
+}
+
